--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "TimeSeriesReader",
   "version": "0.3.0",
   "devDependencies": {
+    "JSONStream": "~1.0.4",
+    "csv-streamify": "~2.0.0",
     "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-jade": "~0.9.0",
-    "grunt-contrib-stylus": "~0.11.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-node-webkit-builder": "~0.1.14",
-    "csv-steamify": "~2.0.0",
-    "JSONStream": "~1.0.4"
+    "grunt-contrib-jade": "~0.9.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-stylus": "~0.11.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-node-webkit-builder": "^1.0.2",
+    "grunt-nw-builder": "~2.0.0"
   }
 }
